--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 </head>
 <body unresolved>
-
+<script>
+	window.location = "components/las2peer-frontend-user-widget/index.html";
+</script>
 
 </body>
 </html>
