Changed link color 🎨

--- a/las2peer-frontend-user-widget.html
+++ b/las2peer-frontend-user-widget.html
@@ -592,6 +592,15 @@ Example:
                 width: 32px;
                 border-radius: 50% 50%;
             }
+
+            a {
+                color: #337ab7;
+                text-decoration: none;
+            }
+            a:hover, a:focus{
+              color: #23527c;
+                text-decoration: none;
+            }
         </style>
         <x-select id="dropdown" horizontal-align="right" vertical-align="top" no-overlap="true" vertical-offset="10">
             <button class="dropdown-trigger" id="dropdown-button"></button>
