--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        components you want documented. -->
        <h1><code>&lt;User-widget&gt;</code> Demo</h1>
 
- <div style="margin:15px;width:150px;"><div style="float:right"><p>Alice</p><div id="user-information" style="width:76px;height:55px"><las2peer-user-widget login-name="alice" login-password="pwalice"></las2peer-user-widget></div></div></div>
+ <div style="margin:15px;width:150px;"><div style="float:right"><p>Alice</p><div id="user-information" style="width:76px;height:55px"><las2peer-user-widget base-url="las2peer.dbis.rwth-aachen.de:9098" login-name="alice" login-password="pwalice"></las2peer-user-widget></div></div></div>
 
 </body>
 </html>
