change endpoint to las2peer domain

--- a/las2peer-frontend-user-widget.html
+++ b/las2peer-frontend-user-widget.html
@@ -69,7 +69,7 @@ Example:
 
                 baseUrl: {
                     type: String,
-                    value: 'https://steen.informatik.rwth-aachen.de:9080',
+                    value: 'https://las2peer.dbis.rwth-aachen.de:9098',
                 },
 
                 loginName: {
@@ -832,7 +832,7 @@ Example:
                 data: Object,
                 baseUrl: {
                     type: String,
-                    value: 'https://steen.informatik.rwth-aachen.de:9080',
+                    value: 'https://las2peer.dbis.rwth-aachen.de:9098',
                 },
                 hover: {
                     type: Boolean,
