--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Alice
               </p>
               <div id="user-information" style="width:76px;height:55px">
-                <las2peer-user-widget base-url="127.0.0.1:8080">
+                <las2peer-user-widget base-url="http://127.0.0.1:8080" login-oidc-token="abcd1234">
                 </las2peer-user-widget>
               </div>
             </div>
