--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                 Alice
               </p>
               <div id="user-information" style="width:76px;height:55px">
-                <las2peer-user-widget base-url="http://127.0.0.1:8080" login-oidc-token="abcd1234">
+                <las2peer-user-widget base-url="https://las2peer.dbis.rwth-aachen.de:9098" login-name="michi" login-password="abc1234">
                 </las2peer-user-widget>
+                <las2peer-userlist-widget base-url="https://las2peer.dbis.rwth-aachen.de:9098" login-name="michi" login-password="abc1234">
+                </las2peer-userlist-widget>
               </div>
             </div>
           </div>
