updated widget to integrate with new node frontend

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Alice
               </p>
               <div id="user-information" style="width:76px;height:55px">
-                <las2peer-user-widget base-url="https://las2peer.dbis.rwth-aachen.de:9098" login-name="michi" login-password="abc1234">
+                <las2peer-user-widget base-url="http://localhost:8080" login-name="alice" login-password="pwalice">
                 </las2peer-user-widget>
                 <las2peer-userlist-widget base-url="https://las2peer.dbis.rwth-aachen.de:9098" login-name="michi" login-password="abc1234">
                 </las2peer-userlist-widget>
