Add theming facility for the dropdown button

--- a/index.html
+++ b/index.html
@@ -33,5 +33,21 @@
             </div>
           </div>
     </div>
+    <div class="vertical-section-container centered">
+      <h3>Themed las2peer-frontend-user-widget demo</h3>
+      <div style="margin:15px;width:150px;">
+        <div style="float:right">
+          <p>
+            Alice
+          </p>
+          <div id="user-information-themed" style="width:76px;height:55px; --user-widget-button-background: deeppink">
+            <las2peer-user-widget base-url="http://localhost:8080" login-name="alice" login-password="pwalice">
+            </las2peer-user-widget>
+            <las2peer-userlist-widget base-url="https://las2peer.dbis.rwth-aachen.de:9098" login-name="michi" login-password="abc1234">
+            </las2peer-userlist-widget>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
